Fixed scrollbar.

--- a/index.css
+++ b/index.css
@@ -21,8 +21,10 @@ header {
   align-items: center;
   padding: 10px 20px;
   box-shadow: 0 1px 8px #ddd;
+  overflow: auto;
   position: fixed;
   top: 0;
+  white-space: nowrap;
   width: 100%;
 }
 
@@ -65,7 +67,7 @@ iframe {
 }
 
 .main {
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
 .text {
